[tool.poetry]
name = "flet-alchemy"
version = "0.1.0"
description = ""
authors = ["nbilbo"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.22.0"
dynaconf = "^3.2.5"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
